@@ -1,3 +1,6 @@
+2004-05-13  Karl Runge <runge@karlrunge.com>
+	* improvements to -accept popup: yes/no buttons and timeout. 
+
 2004-05-08  Karl Runge <runge@karlrunge.com>
 	* add -accept some-command/xmessage/popup to prompt local X11 user
 	  or otherwise decide to accept an incoming client. 
